--- a/DigitalVote/Timer.resx
+++ b/DigitalVote/Timer.resx
@@ -117,4 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAABMLAAATCwAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFGeTMBRnkzAUZ
+        5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ
+        5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUZ
+        5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ
+        5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAABRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ
+        5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ
+        5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ
+        5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ
+        5MwFGeTMBRnkzA02tdYXZWPqBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ
+        5MwFGeTMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ
+        5MwFGeTMBRnkzAUZ5MwNOq7XIpAc/iOTGP8ZbFjsBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ
+        5MwFGeTMBRnkzAUZ5MwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUZ5MwFGeTMBRnkzAUZ
+        5MwFGeTMBRnkzAUZ5MwFGeTMDj+j2iORGv4jkxj/I5MY/yOTGP8YZGXpBRnkzAUZ5MwFGeTMBRnkzAUZ
+        5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABRnkzAUZ
+        5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAoyudUhiib7I5MY/yOTGP8jkxj/I5MY/yKRG/4QRJvcBRnkzAUZ
+        5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwLNLbWIIsk+yOTGP8jkxj/I5MY/yOTGP8jkxj/I5MY/yKQ
+        G/4PQp/bBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAUZ5MwFGeTMBRnkzAUZ5MwFGeTMCzaz1iGMI/sjkxj/I5MY/yOTGP8ikRv+IIol+yOT
+        GP8jkxj/I5MY/yKQHf0OPabZBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAABRnkzAUZ5MwFGeTMBRnkzA48q9ghjiD8I5MY/yOTGP8jkxj/Io8e/Q9A
+        o9oJLcDTIIko+iOTGP8jkxj/I5MY/yKPHv0MO6vYBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFGeTMBRnkzAUZ5MwPQaHaIpAd/SOTGP8jkxj/I5MY/yGP
+        H/0OPqbZBRnkzAUZ5MwJLr/UIIon+iOTGP8jkxj/I5MY/yGMIvwLNrPWBRnkzAUZ5MwFGeTMBRnkzAUZ
+        5MwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUZ5MwFGeTMBRnkzBVbdOUjkxj/I5MY/yOT
+        GP8hiyL8Czew1wUZ5MwFGeTMBRnkzAUZ5MwKM7fVIYwj+yOTGP8jkxj/I5MY/yGMIfwLNLbWBRnkzAUZ
+        5MwFGeTMBRnkzAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABRnkzAUZ5MwFGeTMBRnkzBdg
+        becjkxj/IYwj+ws3sdcFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwNOLDXIY4g/COTGP8jkxj/I5MY/yCM
+        JPsMQaLZBRnkzAUZ5MwFGeTMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFGeTMBRnkzAUZ
+        5MwFGeTMBRnkzBZeceYKMb7UBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwMOKzYIY4g/SOT
+        GP8jkxj/I5MY/yGTGP4LPqfYBRnkzAUZ5MwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUZ
+        5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ
+        5MwOP6PaIo8c/iOTGP8jkxj/I5MY/yGTGf4KOq7XBRnkzAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAABRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ
+        5MwFGeTMBRnkzAUZ5MwRZG3mI5QX/yOTGP8jkxj/I5MY/yGSG/4KNbfVAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ
+        5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwTaGXoIpQY/yOTGP8jkxj/I5MY/yCTG/4Nrg0TAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ
+        5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwUbF7qI5MY/yOTGP8jkxj/I5MY/xOq
+        C88Oqg4SAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ
+        5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwUcFfsI5MY/yOT
+        GP8jkxj/FKoL/xSqC8cTsBMNAAAAAAAAAAAAAAAAAAAAAAAAAAAFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ
+        5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ
+        5MwWdk7uI5MY/yOTGP8Uqgv/FKoL/xOpCsUVqhUMAAAAAAAAAAAAAAAAAAAAAAUZ5MwFGeTMBRnkzAUZ
+        5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ
+        5MwFGeTMBRnkzAUZ5MwWfEjwI5MY/xSqC/8Uqgv/FKoL/xSqCn4AAAAAAAAAAAAAAAAAAAAABRnkzAUZ
+        5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ
+        5MwFGeTMBRnkzAUZ5MwFGeTMBRnkzAUZ5MwYgEDyFKoL/xSqC/8TqgqpAJkABQAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUqQuGE6oKpgC/AAQAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAfwACAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA//////////////////////AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AA
+        AA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAAfwAAAD8AAAAfAA
+        AADwAAAA8AAAAP////H////7//////////8=
+</value>
+  </data>
 </root>
